--- a/infromation.html
+++ b/infromation.html
@@ -3,12 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Suresh Suthar</title>
+
 </head>
 <body>
+    <div class="text">
     <h1>18CSE301J Information Visualization</h1>
     <h1>SURESH SUTHAR</h1>
+    <hr style="border:1px solid black; width:100%">
     <h1>TABLEAU PROJECT</h1>
+    <h2>Assignment 1</h2>
+    <div class="pdf">
+        <iframe src="./Assignment/CensusAnalysis.pdf"
+            width="1200"
+            height="1000"
+        ></iframe>
+    </div>
+    <h1>Assignemnt 2</h1>
+    </div>
+    <div class='tableauPlaceholder' style="margin:auto;border-radius: 20px;" id='viz1677575606880' style='position: relative'><noscript><a href='#'><img alt='Dashboard 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Cu&#47;CustomerAnalysis_16775755962130&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='CustomerAnalysis_16775755962130&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Cu&#47;CustomerAnalysis_16775755962130&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object>
+    </div> 
+    
+    
+        <script type='text/javascript'>                    
+        var divElement = document.getElementById('viz1677575606880');                   
+         var vizElement = divElement.getElementsByTagName('object')[0];                    
+         if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1400px';vizElement.style.height='827px';} 
+         else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1400px';vizElement.style.height='827px';} 
+         else { vizElement.style.width='100%';vizElement.style.height='1827px';}                     
+         var scriptElement = document.createElement('script');                    
+         scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
+         vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+    </script>      
 </body>
 </html>
