--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
     <h1>TABLEAU PROJECT</h1>
     <h2>Assignment 1</h2>
     <div class="pdf">
-        <iframe src="./Assignment/CensusAnalysis.pdf"
-            width="1200"
+        <embed src="Assignment/CensusAnalysis.pdf#toolbar=0"
+            width="800"
             height="1000"
-        ></iframe>
+        ></embed>
     </div>
     <h1>Assignemnt 2</h1>
     </div>
     <div class='tableauPlaceholder' style="margin:auto;border-radius: 20px;" id='viz1677575606880' style='position: relative'><noscript><a href='#'><img alt='Dashboard 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Cu&#47;CustomerAnalysis_16775755962130&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='CustomerAnalysis_16775755962130&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Cu&#47;CustomerAnalysis_16775755962130&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object>
     </div> 
+
+    <h1 style="text-align: center;margin-top: 100px;">Assignment 3</h1>
     
     
         <script type='text/javascript'>                    
@@ -36,6 +38,6 @@
          var scriptElement = document.createElement('script');                    
          scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
          vizElement.parentNode.insertBefore(scriptElement, vizElement);                
-    </script>      
+    </script>   
 </body>
 </html>
