--- a/index.html
+++ b/index.html
@@ -1,43 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="style.css">
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/3.0.2/topojson.min.js"
+        integrity="sha512-4UKI/XKm3xrvJ6pZS5oTRvIQGIzZFoXR71rRBb1y2N+PbwAsKa5tPl2J6WvbEvwN3TxQCm8hMzsl/pO+82iRlg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Suresh Suthar</title>
 
 </head>
+
 <body>
     <div class="text">
-    <h1>18CSE301J Information Visualization</h1>
-    <h1>SURESH SUTHAR</h1>
-    <hr style="border:1px solid black; width:100%">
-    <h1>TABLEAU PROJECT</h1>
-    <h2>Assignment 1</h2>
-    <div class="pdf">
-        <embed src="Assignment/CensusAnalysis.pdf#toolbar=0"
-            width="800"
-            height="1000"
-        ></embed>
+        <h1>18CSE301J Information Visualization</h1>
+        <h1>SURESH SUTHAR</h1>
+        <h1>RA2011003011323</h1>
+        <hr style="border:1px solid black; width:100%">
+        <h1>TABLEAU PROJECT</h1>
+        <h2>Assignment 1</h2>
+        <div class="pdf">
+            <embed src="Assignment/CensusAnalysis.pdf#toolbar=0" width="800" height="1000"></embed>
+        </div>
+        <h1 style="margin-bottom: 50px;">Assignement 2</h1>
     </div>
-    <h1>Assignemnt 2</h1>
+    <div class='tableauPlaceholder' style="margin:auto;border-radius: 20px;" id='viz1677575606880'
+        style='position: relative'><noscript><a href='#'><img alt='Dashboard 1 '
+                    src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Cu&#47;CustomerAnalysis_16775755962130&#47;Dashboard1&#47;1_rss.png'
+                    style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
+            <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+            <param name='embed_code_version' value='3' />
+            <param name='site_root' value='' />
+            <param name='name' value='CustomerAnalysis_16775755962130&#47;Dashboard1' />
+            <param name='tabs' value='no' />
+            <param name='toolbar' value='yes' />
+            <param name='static_image'
+                value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Cu&#47;CustomerAnalysis_16775755962130&#47;Dashboard1&#47;1.png' />
+            <param name='animate_transition' value='yes' />
+            <param name='display_static_image' value='yes' />
+            <param name='display_spinner' value='yes' />
+            <param name='display_overlay' value='yes' />
+            <param name='display_count' value='yes' />
+            <param name='language' value='en-US' />
+            <param name='filter' value='publish=yes' />
+        </object>
     </div>
-    <div class='tableauPlaceholder' style="margin:auto;border-radius: 20px;" id='viz1677575606880' style='position: relative'><noscript><a href='#'><img alt='Dashboard 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Cu&#47;CustomerAnalysis_16775755962130&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='CustomerAnalysis_16775755962130&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Cu&#47;CustomerAnalysis_16775755962130&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object>
-    </div> 
 
-    <h1 style="text-align: center;margin-top: 100px;">Assignment 3</h1>
-    
-    
-        <script type='text/javascript'>                    
-        var divElement = document.getElementById('viz1677575606880');                   
-         var vizElement = divElement.getElementsByTagName('object')[0];                    
-         if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1400px';vizElement.style.height='827px';} 
-         else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1400px';vizElement.style.height='827px';} 
-         else { vizElement.style.width='100%';vizElement.style.height='1827px';}                     
-         var scriptElement = document.createElement('script');                    
-         scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
-         vizElement.parentNode.insertBefore(scriptElement, vizElement);                
-    </script>   
+    <h1 style="margin-top: 100px;">Assignment 3 (using D3js)</h1>
+    <hr>
+    <h2 id="title">USA Education Data</h2>
+    <div id="container">
+        <svg id="canvas"></svg>
+        <div id="rightSide">
+            <div id="tooltip"></div>
+            <svg id="legend">
+                <g>
+                    <rect x="10" y="0" width="40" height="40" fill="#FF6B6B"></rect>
+                    <text x="60" y="20" fill="black">Less than 15%</text>
+                </g>
+                <g>
+                    <rect x="10" y="40" width="40" height="40" fill="#FF3F3D"></rect>
+                    <text x="60" y="60" fill="black">15% than 30%</text>
+                </g>
+                <g>
+                    <rect x="10" y="80" width="40" height="40" fill="#D32431"></rect>
+                    <text x="60" y="100" fill="black">30% to 45%</text>
+                </g>
+                <g>
+                    <rect x="10" y="120" width="40" height="40" fill="#6B0000"></rect>
+                    <text x="60" y="140" fill="black">More than 45%</text>
+                </g>
+            </svg>
+            <div id="description">
+                Percentage of People over 25 with a bachelors degree or higher.<br>
+                Source:<a href='https://www.ers.usda.gov/data-products/county-level-data-sets/download-data.aspx'
+                    target="_blank">USDA Economics Research Service</a>
+            </div>
+        </div>
+    </div>
+    <h1>Assingment 4</h1>
+
 </body>
+<script src="script.js"></script>
+<script type='text/javascript'>
+    var divElement = document.getElementById('viz1677575606880');
+    var vizElement = divElement.getElementsByTagName('object')[0];
+    if (divElement.offsetWidth > 800) { vizElement.style.width = '1400px'; vizElement.style.height = '827px'; }
+    else if (divElement.offsetWidth > 500) { vizElement.style.width = '1400px'; vizElement.style.height = '827px'; }
+    else { vizElement.style.width = '100%'; vizElement.style.height = '1827px'; }
+    var scriptElement = document.createElement('script');
+    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+    vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+</script>
+
 </html>
