--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     integrity="sha512-4UKI/XKm3xrvJ6pZS5oTRvIQGIzZFoXR71rRBb1y2N+PbwAsKa5tPl2J6WvbEvwN3TxQCm8hMzsl/pO+82iRlg=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Suresh Suthar</title>
 
 </head>
@@ -82,7 +82,11 @@
             </div>
         </div>
     </div>
-    <h1>Assingment 4</h1>
+    <div class="text">
+    <h1>Assingment 4 (using Python Plotly)</h1>
+        <iframe width="1200" height="800" frameborder="0" scrolling="no" src="https://plotly.com/~ss0305/3.embed"></iframe>
+    </div>
+    
 
 </body>
 <script src="script.js"></script>
